--- a/src/components/dashboardFiles/dashboard.html
+++ b/src/components/dashboardFiles/dashboard.html
@@ -41,12 +41,14 @@
       <div class="col-md-12 my-4" v-if="dataLoaded">
         <div class="card">
           <div class="card-body">
-            <div class="d-md-flex align-items-center">
-              <div>
-                <h4 class="card-title mb-0">Mined Algorithims</h4>
-              </div>
+            <!-- <div class="d-md-flex align-items-center"> -->
+            <div>
+              <h4 class="card-title mb-3">Mined Algorithims</h4>
+              <h6 class="card-subtitle mb-2 text-muted">Total UnpaidBalance: {{totalUnpaidBalance}} </h6>
 
             </div>
+
+            <!-- </div> -->
           </div>
           <div class="table-responsve">
             <table class="table table-striped table-hover">
