--- a/src/components/paymentsFiles/payments.html
+++ b/src/components/paymentsFiles/payments.html
@@ -44,7 +44,7 @@
         </div>
       </div>
       <!-- Calculated Sum -->
-      <div class="col-12 mt-3" v-if="dataLoaded">
+      <div class="col-12 mt-3 mb-3" v-if="dataLoaded">
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Calculated Sum</h5>
