--- a/src/components/donateFiles/donate.html
+++ b/src/components/donateFiles/donate.html
@@ -1,35 +1,13 @@
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-4">
-            <div class="list-group" id="list-tab" role="tablist">
-                <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home"
-                    role="tab" aria-controls="home">Addr 1</a>
-                <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile"
-                    role="tab" aria-controls="profile">Addr 2</a>
-                <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages"
-                    role="tab" aria-controls="messages">Addr 3</a>
-            </div>
-        </div>
-        <div class="col-8">
-            <div class="tab-content" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
-                    2 GTX 1060 6gb and gtx 1060 3gb</div>
-                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
-                    GTX 1070</div>
-                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
-                    GTX 1050 TI rarely mines</div>
-            </div>
-        </div>
-    </div>
     <!-- todo: make a contact form on the right side -->
     <div class="row">
-        <div class="col">
+        <div class="col-md-6">
             <h1>My Bitcoin Address:</h1>12WCh85mGoyb5hW9pd6ppkC2szxHLSLYCM
             <div class="container-fluid">
                 <img src="./blockChainaddress.jpg" class="img-fluid" width="200" height="200" alt="">
             </div>
         </div>
-        <div class="col">
+        <div class="col-md-6 py-auto my-auto">
             <h3>Created by <a href="https://brayanmuniz.com">Brayan Muniz</a></h3>
         </div>
     </div>
