updated tables and changed max vue slider

--- a/src/components/addAddressFiles/addAddress.html
+++ b/src/components/addAddressFiles/addAddress.html
@@ -1,4 +1,5 @@
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
 
     <div class="modal-dialog" role="document">
 
@@ -15,10 +16,12 @@
                 <form>
                     <div class="row">
                         <div class="col">
-                            <input type="text" class="form-control" v-model="userNHAddressName" placeholder="Name for address">
+                            <input type="text" class="form-control" v-model="userNHAddressName"
+                                placeholder="Name for address">
                         </div>
                         <div class="col">
-                            <input type="text" class="form-control" v-model="userNHAddress" placeholder="Nicehash Address Data">
+                            <input type="text" class="form-control" v-model="userNHAddress"
+                                placeholder="Nicehash Address Data">
                         </div>
                     </div>
                 </form>
