--- a/src/components/dashboardFiles/dashboard.html
+++ b/src/components/dashboardFiles/dashboard.html
@@ -1,5 +1,5 @@
 <div class="border-bottom">
-  <div class="container-fluid" v-if='$store.state.selectedAddr != null'>
+  <div class="container-fluid" v-if='$store.state.selectedAddr != null && dataLoaded'>
 
     <div class="row mb-3">
       <div class="col-12">
@@ -9,15 +9,7 @@
               <div>
                 <h4 class="card-title mb-0">Current Balance</h4>
                 <h5>{{$store.state.selectedAddr.addr}}</h5>
-                <!-- Todo: Add button to switch between which range you want | Make a for loop and an at click method for one of them. Propogate value up and save in store-->
-                <!-- Todo: For the one that is selected make it highlighted -->
                 <div class="dropdown ml-auto">
-                  <!-- <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Date Range
-                  </button> -->
-                  <!-- <input type="text" v-model="selectedTime"> -->
-                  <!-- <button @click="changeDataPoints">Test</button> -->
                   <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                     <button class="dropdown-item" v-for="date in Object.keys(dataRanges)" @click="changeDateRange(date)"
                       :keys="date.id" type="button">{{date}}</button>
@@ -37,8 +29,8 @@
     </div>
 
     <!-- Mined Algorithims table -->
-    <div class="row">
-      <div class="col-md-12 my-4" v-if="dataLoaded">
+    <div class="row container-fluid">
+      <div class="col-md-12 my-4">
         <div class="card">
           <div class="card-body">
             <!-- <div class="d-md-flex align-items-center"> -->
@@ -50,7 +42,7 @@
 
             <!-- </div> -->
           </div>
-          <div class="table-responsve">
+          <div class="table-responsive-lg">
             <table class="table table-striped table-hover">
               <thead>
                 <tr class="bg-light">
@@ -87,8 +79,6 @@
           </div>
         </div>
       </div>
-
-
     </div>
 
 
@@ -111,9 +101,6 @@
               <button class="btn btn-primary" @click="$refs.slider.setValue($store.state.currentBITPriceNum)">Current
                 BIT
                 Value</button>
-              <!-- <button @click="$refs.slider.setIndex(50)">setIndex</button>
-                    <button @click="log($refs.slider.getValue())">getValue</button>
-                    <button @click="log($refs.slider.getIndex())">getIndex</button> -->
             </div>
           </div>
         </div>
@@ -142,8 +129,7 @@
   </div>
 
 
-  <div class="
-                container-fluid" v-else>
+  <div class=" container-fluid" v-else>
               <h1>Add an Address</h1>
             </div>
             <error v-if="error"> </error>
